# edge_tts_mcp_server

./: .gitignore  README.md  pyproject.toml
src/edge_tts_mcp_server/: __init__.py  server.py
